# Vendor-Management-System

./: README.md  db.sqlite3  erd.dot  pyproject.toml
vendor_management/: settings.py  urls.py
vendors/: custom_response.py  models.py  serializers.py  urls.py  utils.py  views.py
vendors/migrations/: 0001_initial.py  0002_historicalperformance_purchaseorder.py
